feat: Rebrand the tool from 'env-wizard' to 'Envinator' with a Terminator-themed narrative and updated UI messages.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ================================
-# env-wizard Example Configuration
+# envinator Example Configuration
 # ================================
 # Copy this file to .env and fill in your values
 
