--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/your-username/env-wizard"
   },
   "bin": {
-    "envinator": "./dist/index.js"
+    "envinator": "dist/index.js"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
