--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/env-wizard"
+    "url": "https://github.com/KevinArce/envinator"
   },
   "bin": {
     "envinator": "dist/index.js"
