feat: Scope package name and add public publish configuration.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "envinator",
+  "name": "@kevinarce/envinator",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "1.0.0",
   "description": "A cybernetic organism sent back in time to terminate missing environment variables.",
   "author": "Kevin Arce",
