chore: prepare package for release as envinator-cli
- Rename package to `envinator-cli` to avoid registry collision
- Add `.npmrc` to `.gitignore` to prevent credential leak

--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "@kevinarce/envinator",
-  "publishConfig": {
-    "access": "public"
-  },
+  "name": "envinator-cli",
   "version": "1.0.0",
   "description": "A cybernetic organism sent back in time to terminate missing environment variables.",
   "author": "Kevin Arce",
