--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "envinator-cli",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "A cybernetic organism sent back in time to terminate missing environment variables.",
   "author": "Kevin Arce",
   "license": "MIT",
@@ -47,7 +47,12 @@
     "ts-morph": "^27.0.2"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.5",
+    "@semantic-release/npm": "^13.1.4",
     "@types/node": "^22.0.0",
+    "semantic-release": "^25.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vitest": "^3.0.0"
